factorisation du code -> 5.1 suite

--- a/3.1_VA.Rmd
+++ b/3.1_VA.Rmd
@@ -15,6 +15,7 @@ output:
 load("data/engagement/asso.RData")
 
 appartenance <- rbind(appartenance,c("REG","FR","France","-"))
+appartenance <- rbind(appartenance,c("REG","FM","France Métro","-"))
 
 RNApop <- RNAcom %>%
       left_join(.,basecom %>% 
